--- a/index.html
+++ b/index.html
@@ -2,41 +2,87 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Historia del Nightcore</title>
+    <title>Estéticas de Internet</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #141e30, #243b55);
-            color: white;
-            text-align: center;
-            padding: 40px;
-        }
-        h1 {
-            color: #ff4081;
-        }
-        .content {
-            max-width: 800px;
-            margin: auto;
-            text-align: justify;
-            background: rgba(0,0,0,0.4);
-            padding: 20px;
-            border-radius: 12px;
-        }
+        body { background: #222; color: #fff; font-family: Arial, sans-serif; }
+        section { margin: 2em 0; padding: 1em; border-radius: 10px; }
+        /* Vaporwave */
+        #vaporwave { background: linear-gradient(135deg, #ffb6c1, #b0e0e6); color: #4b0082; font-family: 'Comic Sans MS', cursive; }
+        /* Y2K */
+        #y2k { background: linear-gradient(135deg, #e0e0e0, #c0c0ff); color: #ff00cc; font-family: 'Impact', fantasy; }
+        /* Cyberpunk */
+        #cyberpunk { background: linear-gradient(135deg, #0f0f0f, #ff0080); color: #00fff7; font-family: 'Orbitron', sans-serif; }
+        /* Dreamcore */
+        #dreamcore { background: linear-gradient(135deg, #e6e6fa, #ffe4e1); color: #6a5acd; font-family: 'Papyrus', fantasy; }
+        /* Frutiger Aero */
+        #frutiger-aero { background: linear-gradient(135deg, #aeeeee, #b0e0e6); color: #228b22; font-family: 'Frutiger', Arial, sans-serif; }
+        /* Frutiger Metro */
+        #frutiger-metro { background: linear-gradient(135deg, #e0ffff, #f5f5dc); color: #4682b4; font-family: 'Segoe UI', Arial, sans-serif; }
+        h2 { text-align: center; margin-top: 1em; }
+        a { color: #fff; text-decoration: underline; }
     </style>
 </head>
 <body>
-    <h1>Historia del Nightcore</h1>
-    <div class="content">
+    <h2>Estéticas de Internet</h2>
+
+    <section id="vaporwave">
+        <h3>Vaporwave</h3>
         <p>
-            El Nightcore nació en 2002 en Noruega, creado por los DJs Thomas S. Nilsen y Steffen Ojala Søderholm,
-            conocidos como “Nightcore”. Su estilo se caracteriza por tomar canciones originales y acelerar su tempo
-            y tono, creando un sonido más energético y agudo.
+            <strong>Origen:</strong> Surge en los 2010s, inspirado por la nostalgia de los 80 y 90, arte glitch y música electrónica.<br>
+            <strong>Auge:</strong> Popular en Tumblr y YouTube entre 2012 y 2016.<br>
+            <strong>Caída:</strong> Saturación y comercialización redujeron su impacto, aunque sigue influyendo.<br>
+            <strong>Enlazado con:</strong> <a href="#y2k">Y2K</a>, <a href="#cyberpunk">Cyberpunk</a>, <a href="#dreamcore">Dreamcore</a>.
         </p>
+    </section>
+
+    <section id="y2k">
+        <h3>Y2K</h3>
         <p>
-            Con el tiempo, el Nightcore se volvió popular en plataformas como YouTube, donde miles de creadores
-            comenzaron a hacer sus propias versiones. Hoy en día es un género digital con gran influencia en la
-            comunidad de música electrónica y anime.
+            <strong>Origen:</strong> Finales de los 90 y principios de los 2000, marcado por la tecnología, el futurismo y el optimismo digital.<br>
+            <strong>Auge:</strong> Moda, diseño gráfico y web entre 1998 y 2004.<br>
+            <strong>Caída:</strong> El cambio de década y la llegada de estilos minimalistas desplazaron la estética.<br>
+            <strong>Enlazado con:</strong> <a href="#vaporwave">Vaporwave</a>, <a href="#frutiger-aero">Frutiger Aero</a>.
         </p>
-    </div>
+    </section>
+
+    <section id="cyberpunk">
+        <h3>Cyberpunk</h3>
+        <p>
+            <strong>Origen:</strong> Inspirado por la literatura y cine de los 80, como Blade Runner, enfocado en tecnología y distopía.<br>
+            <strong>Auge:</strong> Popularidad en videojuegos, cine y moda desde los 80 hasta hoy.<br>
+            <strong>Caída:</strong> Nunca desapareció, pero su impacto se diluyó por la integración en la cultura mainstream.<br>
+            <strong>Enlazado con:</strong> <a href="#vaporwave">Vaporwave</a>, <a href="#y2k">Y2K</a>.
+        </p>
+    </section>
+
+    <section id="dreamcore">
+        <h3>Dreamcore</h3>
+        <p>
+            <strong>Origen:</strong> Surge en los 2020s, basado en imágenes surrealistas y oníricas, influenciado por internet y creepypasta.<br>
+            <strong>Auge:</strong> Popular en TikTok y foros visuales desde 2021.<br>
+            <strong>Caída:</strong> Aún vigente, pero su saturación puede llevar a una evolución.<br>
+            <strong>Enlazado con:</strong> <a href="#vaporwave">Vaporwave</a>.
+        </p>
+    </section>
+
+    <section id="frutiger-aero">
+        <h3>Frutiger Aero</h3>
+        <p>
+            <strong>Origen:</strong> Inspirado por el diseño gráfico y web de los 2000s, con colores brillantes y formas suaves.<br>
+            <strong>Auge:</strong> Usado en interfaces y publicidad entre 2004 y 2012.<br>
+            <strong>Caída:</strong> El minimalismo desplazó este estilo.<br>
+            <strong>Enlazado con:</strong> <a href="#y2k">Y2K</a>, <a href="#frutiger-metro">Frutiger Metro</a>.
+        </p>
+    </section>
+
+    <section id="frutiger-metro">
+        <h3>Frutiger Metro</h3>
+        <p>
+            <strong>Origen:</strong> Evolución del Frutiger Aero, con influencia del diseño de interfaces de Windows Metro.<br>
+            <strong>Auge:</strong> Popular en sistemas operativos y apps entre 2012 y 2016.<br>
+            <strong>Caída:</strong> El auge de otros estilos como el neumorfismo y el flat design lo desplazaron.<br>
+            <strong>Enlazado con:</strong> <a href="#frutiger-aero">Frutiger Aero</a>.
+        </p>
+    </section>
 </body>
 </html>
